--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,8 @@
               "src/styles.css",
     "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
     "node_modules/primeng/resources/primeng.min.css",
-    "node_modules/primeicons/primeicons.css"
+    "node_modules/primeicons/primeicons.css",
+    "node_modules/primeflex/primeflex.min.css"
     ],
             "scripts": []
           }
